--- a/Notebooks/web_scrapping.ipynb
+++ b/Notebooks/web_scrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "263b99f8-ddea-4641-be85-d8db04f54a86",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "5ba70975-b0aa-4305-8ceb-db3ea4f12744",
    "metadata": {},
    "outputs": [
@@ -113,20 +113,20 @@
        "9                         shingeki no kyoyin        2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the csv that I had with just the titles of Animes\n",
-    "anime_list = pd.read_csv(\"Anime.csv\", sep = \";\")\n",
+    "anime_list = pd.read_csv(\"../Data/Anime.csv\", sep = \";\")\n",
     "anime_list.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "54336b1e-2ca3-4f7f-adb0-f5edb0213680",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "a24cc489-1510-4c13-bdc7-5626cc4ed68b",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 58/58 [01:16<00:00,  1.31s/it]\n"
+      "100%|███████████████████████████████████████████| 58/58 [01:27<00:00,  1.52s/it]\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "7c365dcd-1e57-473b-a37b-d36ded48047c",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "5e35088f-f683-4b0f-846d-e3d7041854b7",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "4        37        23 min per ep   8.62  2006.0        [Madhouse]        2  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,13 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "a42ebbfb-7fd6-4ebf-b4fc-978a12e1b5b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dataframe\n",
-    "df_enriched.to_csv(\"anime_data.csv\", index=False)"
+    "df_enriched.to_csv(\"../Data/anime_data.csv\", index=False)"
    ]
   },
   {
